add orderbook and animal list

--- a/src/main/angular/src/app/app.component.html
+++ b/src/main/angular/src/app/app.component.html
@@ -230,6 +230,12 @@
       <p>{{ currentTimestamp }}</p>
       <p>Animal: {{ currentAnimal }}</p>
       <p>Food: {{ currentFood }}</p>
+      <p>Orderbook: {{ currentOrderbook }}</p>
+      <ul>
+        @for (animal of lastAnimals; track animal) {
+          <li>{{animal}}</li>
+        }
+      </ul>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
