--- a/src/main/angular/src/app/pages/websocket-channels/book/components/book.component.html
+++ b/src/main/angular/src/app/pages/websocket-channels/book/components/book.component.html
@@ -1,2 +1,3 @@
-<b>OrderBook: </b><p>{{ currentOrderbook }}</p>
+<b>OrderBook: </b><p>{{ currentOrderbook | json }}</p>
+<b>OrderBookData: </b><p>{{ currentOrderbookData | json }}</p>
 
