--- a/src/main/angular/src/app/pages/misc/misc.component.html
+++ b/src/main/angular/src/app/pages/misc/misc.component.html
@@ -1,6 +1,7 @@
 
 <h1>Hello, {{ title }}</h1>
 <p>Congratulations! Your app is running. 🎉</p>
+<p>History endpoint: /private/get-order-history</p>
 <p>{{ currentTimestamp }}</p>
 <p>Animal: {{ currentAnimal }}</p>
 <p>Food: {{ currentFood }}</p>
