--- a/src/main/angular/src/app/layout/layout/layout.component.html
+++ b/src/main/angular/src/app/layout/layout/layout.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/ws/book">Websocket</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/order-history">Order History</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
