--- a/src/main/angular/src/app/pages/websocket-channels/order/order.component.html
+++ b/src/main/angular/src/app/pages/websocket-channels/order/order.component.html
@@ -11,11 +11,19 @@
     <th scope="col">AVG PRICE/LIMIT PRICE</th>
     <th scope="col">TIME (CREATED/UPDATED)</th>
     <th scope="col">STATUS</th>
+    <th scope="col">ACTIONS</th>
   </tr>
   </thead>
   <tbody>
     @for (userOrderRow of lastUserOrders; track lastUserOrders) {
-      <tr>
+      <tr
+        [ngClass]="[
+        getRowClass(userOrderRow),
+        hoveredOrderId === userOrderRow.result.data[0].order_id ? 'table-active' : ''
+      ]"
+        (mouseenter)="onRowEnter(userOrderRow.result.data[0].order_id)"
+        (mouseleave)="onRowLeave()"
+      >
         <th scope="row">{{userOrderRow.result.data[0].order_id}}</th>
         <td>{{userOrderRow.result.data[0].instrument_name}}</td>
         <td>{{userOrderRow.result.data[0].order_type}}</td>
@@ -24,6 +32,9 @@
         <td>{{userOrderRow.result.data[0].avg_price}}/{{userOrderRow.result.data[0].limit_price}}</td>
         <td>{{userOrderRow.result.data[0].create_time | date:'yyyy-MM-dd HH:mm:ss'}} / {{userOrderRow.result.data[0].update_time | date:'yyyy-MM-dd HH:mm:ss'}}</td>
         <td>{{userOrderRow.result.data[0].status}}</td>
+        <td>
+          <button class="btn btn-sm btn-danger" (click)="removeOrder($index)">Remove</button>
+        </td>
       </tr>
     }
   </tbody>
