change order of avg price and limit price

--- a/src/main/angular/src/app/pages/websocket-channels/order/order.component.html
+++ b/src/main/angular/src/app/pages/websocket-channels/order/order.component.html
@@ -8,7 +8,7 @@
     <th scope="col">ORDER TYPE</th>
     <th scope="col">SIDE</th>
     <th scope="col">QUANTITY</th>
-    <th scope="col">AVG PRICE/LIMIT PRICE</th>
+    <th scope="col">LIMIT PRICE / AVG PRICE</th>
     <th scope="col">TIME (CREATED/UPDATED)</th>
     <th scope="col">STATUS</th>
     <th scope="col">ACTIONS</th>
@@ -28,8 +28,8 @@
         <td>{{userOrderRow.result.data[0].instrument_name}}</td>
         <td>{{userOrderRow.result.data[0].order_type}}</td>
         <td>{{userOrderRow.result.data[0].side}}</td>
-        <td>{{userOrderRow.result.data[0].cumulative_quantity}}/{{userOrderRow.result.data[0].quantity}}</td>
-        <td>{{userOrderRow.result.data[0].avg_price}}/{{userOrderRow.result.data[0].limit_price}}</td>
+        <td>{{userOrderRow.result.data[0].cumulative_quantity}} / {{userOrderRow.result.data[0].quantity}}</td>
+        <td>{{userOrderRow.result.data[0].limit_price}} / {{userOrderRow.result.data[0].avg_price}}</td>
         <td>{{userOrderRow.result.data[0].create_time | date:'yyyy-MM-dd HH:mm:ss'}} / {{userOrderRow.result.data[0].update_time | date:'yyyy-MM-dd HH:mm:ss'}}</td>
         <td>{{userOrderRow.result.data[0].status}}</td>
         <td>
