chart still not rendering but corrected the types for candlesticks

--- a/src/main/angular/src/app/pages/rest-channels/candlestick/candlestick.component.html
+++ b/src/main/angular/src/app/pages/rest-channels/candlestick/candlestick.component.html
@@ -1,2 +1,6 @@
-<p>candlestick works!</p>
+<p>candlestick works!?</p>
+<highcharts-chart
+  [options]="chartOptions"
+  style="width: 100%; height: 400px; display: block;">
+</highcharts-chart>
 <pre>{{candlesticks  | json }}</pre>
