prevent warning in console and add WORKING stock highcharts - candlesticks

--- a/src/main/angular/src/app/layout/layout/layout.component.html
+++ b/src/main/angular/src/app/layout/layout/layout.component.html
@@ -15,8 +15,16 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/candlestick">Candlestick</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/stock-single-line-series">StockSingleLineSeries</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            HighCharts Examples
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="/stock-single-line-series">StockSingleLineSeries</a></li>
+            <li><a class="dropdown-item" routerLink="/stock-intraday-candlestick-series">StockIntradayCandleStickSeries</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
