--- a/src/main/angular/src/app/pages/websocket-channels/book/components/order-book-live-chart/order-book-live-chart.component.html
+++ b/src/main/angular/src/app/pages/websocket-channels/book/components/order-book-live-chart/order-book-live-chart.component.html
@@ -1,5 +1,1 @@
-<highcharts-chart
-  [options]="chartOptions"
-  [(update)]="updateFlag"
-  style="width: 100%; height: 400px; display: block;">
-</highcharts-chart>
+<div [chart]="chartOptions"></div>
