--- a/src/main/angular/src/app/pages/rest-channels/candlestick/candlestick.component.html
+++ b/src/main/angular/src/app/pages/rest-channels/candlestick/candlestick.component.html
@@ -1,3 +1,6 @@
 <p>candlestick works - no chart</p>
+<input [(ngModel)]="timeFrame" placeholder="time frame">
+<input [(ngModel)]="instrument" placeholder="instrument">
+<button (click)="changeInstrumentAndTimeFrame()">Change instrument</button>
 <div [chart]="stock"></div>
 <pre>{{candlesticks  | json }}</pre>
