--- a/src/main/angular/src/app/pages/rest-channels/candlestick/candlestick.component.html
+++ b/src/main/angular/src/app/pages/rest-channels/candlestick/candlestick.component.html
@@ -1,5 +1,18 @@
 <p>candlestick works - no chart</p>
-<input [(ngModel)]="timeFrame" placeholder="time frame">
+<select [(ngModel)]="timeFrame">
+  <option value="1m">1 Minute</option>
+  <option value="5m">5 Minutes</option>
+  <option value="15m">15 Minutes</option>
+  <option value="30m">30 Minutes</option>
+  <option value="1h">1 Hour</option>
+  <option value="2h">2 Hours</option>
+  <option value="4h">4 Hours</option>
+  <option value="12h">12 Hours</option>
+  <option value="1D">1 Day</option>
+  <option value="7D">1 Week</option>
+  <option value="14D">2 Weeks</option>
+  <option value="1M">1 Month</option>
+</select>
 <input [(ngModel)]="instrument" placeholder="instrument">
 <button (click)="changeInstrumentAndTimeFrame()">Change instrument</button>
 <div [chart]="stock"></div>
