added sma to layout.component.html

--- a/src/main/angular/src/app/layout/layout/layout.component.html
+++ b/src/main/angular/src/app/layout/layout/layout.component.html
@@ -22,6 +22,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" routerLink="/stock-single-line-series">StockSingleLineSeries</a></li>
             <li><a class="dropdown-item" routerLink="/stock-intraday-candlestick-series">StockIntradayCandleStickSeries</a></li>
+            <li><a class="dropdown-item" routerLink="/sma-volume-by-price">SMA by volume and price</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
