add volume chart to candlesticks

--- a/src/main/angular/src/app/pages/rest-channels/candlestick/candlestick.component.html
+++ b/src/main/angular/src/app/pages/rest-channels/candlestick/candlestick.component.html
@@ -16,4 +16,4 @@
 <input [(ngModel)]="instrument" placeholder="instrument">
 <button (click)="changeInstrumentAndTimeFrame()">Change instrument</button>
 <div [chart]="stock"></div>
-<pre>{{candlesticks  | json }}</pre>
+<!--<pre>{{candlesticks  | json }}</pre>-->
