--- a/src/main/angular/src/app/layout/layout/layout.component.html
+++ b/src/main/angular/src/app/layout/layout/layout.component.html
@@ -38,6 +38,14 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Indicators
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="/indicators/rsi">RSI</a></li>
+          </ul>
+        </li>
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
         </li>
