enable the legend

--- a/src/main/angular/src/app/pages/ta4j-indicators/rsi-charts-page/rsi-charts-page.component.html
+++ b/src/main/angular/src/app/pages/ta4j-indicators/rsi-charts-page/rsi-charts-page.component.html
@@ -1,3 +1,4 @@
+<app-open-price-all-timeframes></app-open-price-all-timeframes>
 <app-close-price-all-timeframes></app-close-price-all-timeframes>
 <app-rsi-indicator-all-timeframes [barCount]="14"></app-rsi-indicator-all-timeframes>
 <app-rsi-indicator-single-timeframe [timeframe]="'15m'" [barCount]="14"></app-rsi-indicator-single-timeframe>
