--- a/src/main/angular/src/app/layout/layout/layout.component.html
+++ b/src/main/angular/src/app/layout/layout/layout.component.html
@@ -15,6 +15,11 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/rest/candlesticks">Sample Candlesticks</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/rest/dynamic-candlesticks">Sample Dynamic Candlesticks</a>
+        </li>
+
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             HighCharts Examples
