--- a/src/main/angular/src/app/layout/layout/layout.component.html
+++ b/src/main/angular/src/app/layout/layout/layout.component.html
@@ -18,6 +18,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/rest/dynamic-candlesticks">Sample Dynamic Candlesticks</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/rest/instruments">Instruments</a>
+        </li>
 
 
         <li class="nav-item dropdown">
