add sample graph

--- a/src/main/angular/src/app/pages/rest-channels/instrument/instrument.component.html
+++ b/src/main/angular/src/app/pages/rest-channels/instrument/instrument.component.html
@@ -1,1 +1,7 @@
 <p>instrument works! (see console log)</p>
+<highcharts-chart
+  *ngIf="chartOptions.series?.length"
+  [constructorType]="'chart'"
+  [options]="chartOptions"
+  class="chart">
+</highcharts-chart>
